# bubblepix

./: .gitignore  README.md  pyproject.toml
bubblepix/: cli.py
bubblepix/catalog/: __init__.py  builder.py  db.py  exif.py  hasher.py  name_date.py  query.py  report.py  video_exif.py  walker.py
bubblepix/dedup/: __init__.py  engine.py
